--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Nueva Actividad{% endblock %}
 
-{% block body %}
+{% block content %}
     <div class="container mt-4">
         <!-- Título de la página -->
         <h1 class="mb-4 text-center text-primary">Lista de Actividades</h1>
