--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,50 +2,80 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        
+        <title>{% block title %}AdminKit{% endblock %}</title>
+
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
 
         <!-- Links de DataTables -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
-        
+
+        <!-- Estilos -->
         {% block stylesheets %}
             {{ encore_entry_link_tags('adminkit') }}
             {{ encore_entry_link_tags('app') }}
-        
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('adminkit_js') }}
-            {{ encore_entry_script_tags('app') }}
-            
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
     <body>
-        {% block body %}
-            <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="{{ path('app_home') }}">AdminKit</a>
-                    <div class="collapse navbar-collapse" id="navbar-collapsable">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="{{ path('app_login') }}">Log In</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="btn btn-outline-light">Sign up</a>
-                            </li>
-                        </ul>
-                    </div>
+        <div class="wrapper">
+            <!-- Barra lateral -->
+            <nav id="sidebar" class="sidebar js-sidebar">
+                <div class="sidebar-content">
+                    <a class="sidebar-brand" href="{{ path('app_home') }}">
+                        <span class="align-middle">Personal Activity</span>
+                    </a>
+                    <ul class="sidebar-nav">
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="{{ path('app_home') }}">
+                                <i class="align-middle" data-feather="home"></i>
+                                <span class="align-middle">Inicio</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="{{ path('app_activity_new') }}">
+                                <i class="align-middle" data-feather="plus-circle"></i>
+                                <span class="align-middle">Añadir Actividad</span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
 
-            <!-- Main Content -->
-            <div class="container my-4">
-                {% block content %}{% endblock %}
+            <!-- Contenido principal -->
+            <div class="main">
+                <!-- Barra superior -->
+                <nav class="navbar navbar-expand navbar-light navbar-bg">
+                    <a class="sidebar-toggle js-sidebar-toggle">
+                        <i class="hamburger align-self-center"></i>
+                    </a>
+                    <div class="navbar-collapse collapse">
+                        <ul class="navbar-nav navbar-align">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+                                    <i class="align-middle" data-feather="user"></i>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-end">
+                                    <a class="dropdown-item" href="{{ path('app_logout') }}">Cerrar sesión</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+
+                <!-- Contenido dinámico -->
+                <main class="content">
+                    <div class="container-fluid p-0">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
+                </main>
             </div>
+        </div>
+
+        <!-- Scripts -->
+        {% block javascripts %}
+            {{ encore_entry_script_tags('adminkit_js') }}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
 
         <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
