--- a/templates/catalog/new.html.twig
+++ b/templates/catalog/new.html.twig
@@ -4,7 +4,7 @@
 
 {% block title %}Crear Nueva Actividad{% endblock %}
 
-{% block body %}
+{% block content %}
     <div class="container mt-4">
         <!-- Título de la página -->
         <h1 class="mb-4 text-center text-primary">Crear Nueva Actividad</h1>
