--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,20 +2,194 @@
 
 {% block title %}Home{% endblock %}
 
-{% block body %}
-<div class="container py-5">
-    <div class="example-wrapper bg-light p-4 rounded shadow-sm">   <!-- Fondo claro y bordes redondeados -->
-        <h1 class="text-dark">Hello! ✅</h1>
-        <div class="mb-3">
-            <a href="{{ path('app_login') }}" class="btn btn-primary">Iniciar Sesión</a>
+{% block content %}
+    <div class="row mb-2 mb-xl-3">
+        <div class="col-auto d-none d-sm-block">
+            <h3><strong>Panel De Actividades</strong></h3>
         </div>
 
-        <div>
-            <a href="{{ path('app_activity_new') }}" class="btn btn-primary">Añadir nueva Actividad</a>
+        <div class="col-auto ms-auto text-end mt-n1">
+            <!-- Si el usuario está autenticado -->
+            {% if app.user %}
+                <a href="#" class="btn btn-light bg-white me-2">Invitar a un amigo</a>
+                <a href="{{ path('app_activity_new') }}" class="btn btn-primary">Crear una Actividad</a>
+            {% else %}
+            <!-- Si el usuario NO está autenticado que este vacio-->
+            {% endif %}
         </div>
-        
     </div>
-</div>
+
+    <div class="row mb-2 mb-xl-3">
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col mt-0">
+                            <h5 class="card-title">Actividades Finalizadas</h5>
+                        </div>
+                        <div class="col-auto">
+                            <div class="stat text-primary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle align-middle"><circle cx="12" cy="12" r="10"></circle><path d="M9 12l2 2 4-4"></path></svg>
+                            </div>
+                        </div>
+                    </div>
+                    <h1 class="mt-1 mb-3">{{ actividades_finalizadas_count }}</h1>
+                    <div class="mb-0">
+                        <span class="badge badge-primary-light">-3.65%</span>
+                        <span class="text-muted">Desde la última semana</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col mt-0">
+                            <h5 class="card-title">Usuarios Registrados</h5>
+                        </div>
+                        <div class="col-auto">
+                            <div class="stat text-primary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users align-middle"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+                            </div>
+                        </div>
+                    </div>
+                    <h1 class="mt-1 mb-3">{{ usuarios_registrados_count }}</h1>
+                    <div class="mb-0">
+                        <span class="badge badge-success-light">5.25%</span>
+                        <span class="text-muted">Desde la última semana</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-6 col-xxl-8">
+            <div class="card flex-fill w-100">
+                <div class="card-header">
+                    <div class="float-end">
+                        <form class="row g-2">
+                            <div class="col-auto">
+                                <select class="form-select form-select-sm bg-light border-0">
+                                    <option value="0">Enero</option>
+                                    <option value="1">Febrero</option>
+                                    <option value="2">Marzo</option>
+                                    <option value="3">Abril</option>
+                                </select>
+                            </div>
+                            <div class="col-auto">
+                                <input type="text" class="form-control form-control-sm bg-light rounded-2 border-0" style="width: 100px;" placeholder="Search..">
+                            </div>
+                        </form>
+                    </div>
+                    <h5 class="card-title mb-0">Actividades Finalizadas</h5>
+                </div>
+                <div class="card-body pt-2 pb-3">
+                    <div class="chart chart-sm">
+                        <canvas id="myChart" style="display: block; height: 250px; width: 863px;" width="1078" height="312" class="chartjs-render-monitor"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-2 mb-xl-3">
+        <!-- Código del calendario -->
+        <div class="col-12 col-md-6 col-xxl-3 d-flex order-2 order-xxl-1">
+            <div class="card flex-fill">
+                <div class="card-header">
+                    {# <div class="card-actions float-end">
+                        <div class="dropdown position-relative">
+                            <a href="#" data-bs-toggle="dropdown" data-bs-display="static">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
+                            </a>
+                        </div>
+                    </div> #}
+                    <h5 class="card-title mb-0">Calendario</h5>
+                </div>
+                <div class="card-body d-flex">
+                    <div class="align-self-center w-100">
+                        <div class="chart">
+                            <div id="datetimepicker-dashboard" class="flatpickr-input" readonly="readonly"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Código del Mapa -->
+        <div class="col-12 col-md-6 col-xxl-9 d-flex order-3 order-xxl-2">
+            <div class="card flex-fill">
+                <div class="card-header">
+                    <h5 class="card-title mb-0">Mapa</h5>
+                </div>
+
+                <div id="map" style="height: 500px;"></div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <style>
+        .leaflet-control-attribution {
+            display: none !important;
+        }
+    </style>
+
+    <!-- Iniciar JS del calendario -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            flatpickr('#datetimepicker-dashboard', {
+                inline: true,
+                prevArrow: '<span class="fas fa-chevron-left" title="Previous month"></span>',
+                nextArrow: '<span class="fas fa-chevron-right" title="Next month"></span>',
+            });
+        });
+        ;
+    </script>
+
+    <!-- Iniciar JS del mapa -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var map = L.map('map').setView([40.4168, -3.7038], 6);
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                attributionControl: false
+            }).addTo(map);
+        });
+    </script>
+
+    <!-- JS de las actividades finalizadas-->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var actividadesFinalizadasCount = {{ actividades_finalizadas_count }};
+            
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],
+                    datasets: [{
+                        label: 'Actividades Finalizadas',
+                        data: {{ actividades_por_mes|json_encode|raw }},
+                        borderColor: '#007bff',
+                        backgroundColor: 'rgba(0, 123, 255, 0.2)',
+                        fill: true
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            position: 'top',
+                        },
+                    },
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            
+                        }
+                    }
+                }
+            });
+        });
+    </script>
+
 {% endblock %}
-
-
