Creacion de la funcionalidad para restablecer la contraseña

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -120,7 +120,7 @@
                                         </a>
                                     </div>
                                     <div class="dropdown-menu-footer">
-                                        <a href="#" class="text-muted">Show all notifications</a>
+                                        <a href="#" class="text-muted">Mostrar todas las notificaciones</a>
                                     </div>
                                 </div>
                             </li>
@@ -140,47 +140,27 @@
                                     <div class="list-group">
                                         <a href="#" class="list-group-item">
                                             <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <img src="img/avatars/avatar-5.jpg" class="avatar img-fluid rounded-circle" alt="Vanessa Tucker">
-                                                </div>
-                                                <div class="col-10 ps-2">
-                                                    >
-                                                </div>
+                                                
                                             </div>
                                         </a>
                                         <a href="#" class="list-group-item">
                                             <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <img src="img/avatars/avatar-2.jpg" class="avatar img-fluid rounded-circle" alt="William Harris">
-                                                </div>
-                                                <div class="col-10 ps-2">
-                                                    
-                                                </div>
+                                                
                                             </div>
                                         </a>
                                         <a href="#" class="list-group-item">
                                             <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <img src="img/avatars/avatar-4.jpg" class="avatar img-fluid rounded-circle" alt="Christina Mason">
-                                                </div>
-                                                <div class="col-10 ps-2">
-                                                    
-                                                </div>
+                                                
                                             </div>
                                         </a>
                                         <a href="#" class="list-group-item">
                                             <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <img src="img/avatars/avatar-3.jpg" class="avatar img-fluid rounded-circle" alt="Sharon Lessman">
-                                                </div>
-                                                <div class="col-10 ps-2">
-                                                    
-                                                </div>
+                                                
                                             </div>
                                         </a>
                                     </div>
                                     <div class="dropdown-menu-footer">
-                                        <a href="#" class="text-muted">Show all messages</a>
+                                        <a href="#" class="text-muted">Mostrar todos los mensajes</a>
                                     </div>
                                 </div>
                             </li>
