--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -43,7 +43,7 @@
         </div>
         <div class="card-footer text-muted text-center">
             <small>
-                <a {# href="{{ path('app_forgot_password') }}" #} class="text-decoration-none">¿Olvidaste tu contraseña?</a>
+                <a href="{{ path('app_password') }}" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
                 | 
                 <a href="{{ path('app_home') }}" class="text-decoration-none">Volver al Inicio</a>
             </small>
