--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -172,7 +172,12 @@
                                         <i class="align-middle" data-feather="user"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-end">
-                                        <a class="dropdown-item" href="{{ path('app_logout') }}">Cerrar sesión</a>
+                                        <a class="dropdown-item" href="{{ path('app_profile') }}">
+                                            <i class="fas fa-user me-2"></i> Perfil
+                                        </a>
+                                        <a class="dropdown-item" href="{{ path('app_logout') }}">
+                                            <i class="fas fa-sign-out-alt me-2"></i> Cerrar sesión
+                                        </a>
                                     </div>
                                 {% else %}
                                     <!-- Si el usuario NO está autenticado -->
