--- a/templates/finishedActivity/index.html.twig
+++ b/templates/finishedActivity/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Activity index{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Recorded activities</h1>
 
     <table class="table">
