--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,8 +9,11 @@
     <div class="card mb-4">
         <div class="card-body">
             <form method="post">
-                {% if error %}
-                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% if error_message %}
+                    <div class="alert alert-danger d-flex justify-content-between align-items-center">
+                        <span>{{ error_message }}</span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
                 {% endif %}
 
                 {% if app.user %}
