--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,12 +4,23 @@
 
 {% block content %}
 <div class="container-fluid px-4">
-    <h1 class="mt-4">Registro</h1>
+    <h1 class="mt-4 mb-4 text-center">Registro</h1>
     
     <div class="card mb-4">
         <div class="card-body">
             {{ form_errors(registrationForm) }}
             {{ form_start(registrationForm) }}
+
+            <div class="col-md-12 mb-3">
+                <label for="registrationForm_username" class="form-label">Nombre de Usuario:</label>
+                {{ form_widget(registrationForm.profile.username, {'attr': {'class': 'form-control form-control-lg'}}) }}
+            </div>
+            {{ form_widget(registrationForm.profile.biography, {'attr': {'style': 'display: none;'}}) }}
+            {{ form_widget(registrationForm.profile.photo, {'attr': {'style': 'display: none;'}}) }}
+            {{ form_widget(registrationForm.profile.country, {'attr': {'style': 'display: none;'}}) }}
+            {{ form_widget(registrationForm.profile.city, {'attr': {'style': 'display: none;'}}) }}
+            {{ form_widget(registrationForm.profile.postalCode, {'attr': {'style': 'display: none;'}}) }}
+            {{ form_widget(registrationForm.profile.address, {'attr': {'style': 'display: none;'}}) }}
             
             <div class="row">
                 <div class="col-md-6 mb-3">
