--- a/templates/subcategory/index.html.twig
+++ b/templates/subcategory/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Subcategories{% endblock %}
 
-{% block body %}
+{% block content %}
 <style>
     .container { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     table { width: 100%; border-collapse: collapse; }
