--- a/templates/finishedActivity/edit.html.twig
+++ b/templates/finishedActivity/edit.html.twig
@@ -1,13 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Activity{% endblock %}
+{% block title %}Editar Actividad{% endblock %}
 
-{% block body %}
-    <h1>Edit Activity</h1>
+{% block content %}
+<div class="container-fluid px-4">
+    <h1 class="mt-4">Editar Actividad</h1>
 
-    {{ include('finishedActivity/_form.html.twig', {'button_label': 'Update'}) }}
+    <div class="card mb-4">
+        <div class="card-body">
+            <form method="post">
+                {{ form_start(form) }}
 
-    <a href="{{ path('app_activity_index') }}">back to list</a>
+                <div class="mb-3">
+                    {{ form_label(form.name_activity, 'Nombre de la Actividad') }}
+                    <div class="input-group">
+                        {{ form_widget(form.name_activity) }}
+                    </div>
+                    {{ form_errors(form.name_activity) }}
+                </div>
 
-    {{ include('finishedActivity/_delete_form.html.twig') }}
+                {{ form_widget(form.category, {'attr': {'style': 'display: none;'}}) }}
+                {{ form_widget(form.photos, {'attr': {'style': 'display: none;'}}) }}
+                {{ form_widget(form.date, {'attr': {'style': 'display: none;'}}) }}
+
+                {{ form_row(form.catalog, { 'attr': {'type': 'hidden', 'id': 'finished_activity_catalog' }}) }}
+
+                <div class="d-flex justify-content-between">
+                    <button type="submit" class="btn btn-primary btn-lg">Guardar Cambios</button>
+                    <a href="{{ path('app_activity_index') }}" class="btn btn-outline-secondary btn-lg">Cancelar</a>
+                </div>
+
+                {{ form_end(form) }}
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
