--- a/templates/finishedActivity/index.html.twig
+++ b/templates/finishedActivity/index.html.twig
@@ -1,39 +1,55 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Activity index{% endblock %}
+{% block title %}Actividad Finalizada{% endblock %}
 
 {% block content %}
-    <h1>Recorded activities</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Id</th>
-                <th>Date</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for finishedActivity in finishedActivities  %}
-            <tr>
-                <td>{{ finishedActivity.id }}</td>
-                <td>{{ finishedActivity.date ? finishedActivity.date|date('d-m-Y') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_activity_show', {'id': finishedActivity.id}) }}">show</a>
-                    <a href="{{ path('app_activity_edit', {'id': finishedActivity.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
+    <div class="container mt-4">
+        <h1 class="mb-4 text-center text-primary">Lista de Actividades Realizadas</h1>
         
-        </tbody>
-    </table>
+        <div class="card shadow-sm">
+            <div class="card-header bg-primary text-white">
+                <h5 class="card-title">Actividades Realizadas Registradas</h5>
+            </div>
+            <div class="card-body">
+                <table id="finished_activity_table" class="table table-striped table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Fecha de Finalización</th>
+                            <th scope="col" class="text-center">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for finishedActivity in finishedActivities %}
+                            <tr>
+                                <td>{{ finishedActivity.nameActivity }}</td>
+                                <td>{{ finishedActivity.date|date('d/m/Y') }}</td>
+                                <td class="text-center">
+                                    <a href="{{ path('app_activity_edit', {'id': finishedActivity.id}) }}" class="btn btn-warning btn-sm">
+                                        <i class="bi bi-pencil-square"></i> Editar
+                                    </a>
 
-    <div class="d-flex justify-content-between">
-        <a href="{{ path('app_home') }}" class="btn btn-outline-secondary">Volver</a>
+                                    <form action="{{ path('app_activity_delete', {'id': finishedActivity.id}) }}" method="post" class="d-inline" onsubmit="return confirm('¿Estás seguro de que quieres eliminar esta actividad?');">
+                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ finishedActivity.id) }}">
+                                        <button type="submit" class="btn btn-danger btn-sm">
+                                            <i class="bi bi-trash"></i> Eliminar
+                                        </button>
+                                    </form>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
+    <!-- Iniciar JS de DataTables -->
+    <script>
+        $(document).ready(function() {
+            $('#finished_activity_table').DataTable({
+                responsive: true
+            });
+        });
+    </script>
 {% endblock %}
