--- a/templates/finishedActivity/show.html.twig
+++ b/templates/finishedActivity/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Activity{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Activity</h1>
 
     <table class="table">
